<resources>
    <string name="btn_startReading">REKAM</string>
    <string name="btn_login">LOGIN</string>

    <string name="lbl_diagnose">DIAGNOSA</string>
    <string name="lbl_medresult">HASIL REKAM MEDIS</string>
    <string name="lbl_username">username</string>
    <string name="lbl_password">password</string>
    <string name="lbl_daftar">Daftar</string>
    <string name="lbl_nama">Nama</string>
    <string name="lbl_nip">NIP</string>
    <string name="lbl_sandi">Sandi Masuk</string>
    <string name="lbl_ulangSandi">Ulang Kata Sandi</string>
    <string name="btn_simpan">SIMPAN</string>
    <string name="btn_detect">DETEKSI</string>

    <string name="static_ioServer">http://chat.socket.io</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_test">ECG Test</string>
    <string name="btn_medrec">Rekam Medis</string>
    <string name="btn_info">Informasi</string>
    <string name="btn_exit">Keluar</string>
    <string name="lbl_usia">Usia</string>
    <string name="db_lbl_tanggal">Tanggal</string>
    <string name="db_lbl_hasil">Hasil</string>
    <string name="lbl_interval">Interval</string>
    <string name="lbl_tgl_masuk">Tanggal Masuk</string>
    <string name="btn_change_data">Data Pasien</string>
    <string name="app_name">Mobile Ecg</string>
    <string name="lbl_User">Username</string>
    <string name="lbl_mail">E-Mail</string>
    <string name="btn_setting">SETTING</string>
    <string name="lbl_dokter">Dokter Jaga</string>
    <string name="btn_tambah">Tambah Data</string>
    <string name="btn_batal">Batal</string>
    <string name="lbl_gender">Jenis Kelamin</string>
    <string name="lbl_gender_men">Laki-laki</string>
    <string name="check_select_women">Perempuan</string>
    <string name="lbl_reg_idcard">No Identitas</string>
    <string name="lbl_bplace">Tempat Lahir</string>
    <string name="lbl_bdate">Tanggal Lahir</string>
    <string name="lbl_reg_bloodType">Gol. Darah</string>
    <string name="lbl_pBloodType">Gol. Darah</string>

    <string name="info_noConnection">Tidak ada koneksi !</string>
    <string name="info_dataNotFound">Data tidak ditemukan !</string>
    <string name="info_notMatch">Password Salah !</string>
    <string name="info_noDevice">Alat belum terpasang !</string>

    <string name="lbl_diag_qt">QT</string>
    <string name="lbl_diag_pr">PR</string>
    <string name="test_range_ms">500 - 500 (ms)</string>
    <string name="test_numb_500">500</string>
    <string name="lbl_diag_qrs">QRS</string>
    <string name="lbl_diag_rr">RR</string>
    <string name="btn_pasangDokter">Pasang Dokter</string>
    <string name="btn_change_user">Ganti User</string>
    <string name="lbl_PRInt">PR Interval</string>
    <string name="lbl_QTInt">QT Interval</string>
    <string name="lbl_QRSInt">QRS Interval</string>
    <string name="lbl_RRInt">RR Interval/Heart Beat</string>
    <string name="btn_close">TUTUP</string>
    <string name="info_pg_title">Cara Penggunaan Aplikasi</string>
    <string name="info_pg_1">1. Hubungkan ECG sensor pada perangkat mobile anda.</string>
    <string name="info_pg_2">2. Pilih menu ECG Tes untuk melakukan Tes.</string>
    <string name="info_pg_3">3. Hubungkan module ECG dengan perangkat smartphone anda.</string>
    <string name="info_pg_4">4. Pasang Electrode pad pada tubuh anda seperti gambar dibawah :</string>
    <string name="info_pg_5">5. Tekan tombol "Mulai tes" untuk memulai tes.</string>
    <string name="info_pg_6">6. Tekan stop untuk menghentikan tes.</string>
    <string name="info_pg_7">7. Jika anda telah selesai melakukan tes anda bisa menyimpan hasil tes anda dengan menekan tombol "Simpan".</string>
</resources>
