<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".Monitor">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@android:color/darker_gray"
        android:elevation="0dp"
        android:minHeight="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/body_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="@color/color_navy_blue"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/window_ekg"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="4"
            android:background="@color/color_dark_navy_blue">

            <TextView
                android:id="@+id/res_bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:padding="8dp"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/lbl_device_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@color/color_pithcBlack" />
        </FrameLayout>

        <TextView
            android:id="@+id/lbl_diagnosa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/lbl_diagnose"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/window_card"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:background="@color/color_dark_navy_blue"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_diag_qrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:text="@string/lbl_diag_qrs"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/res_range_qrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/res_current_qrs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/color_clearWhite"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_sky_blue"
                    android:textSize="24sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_diag_pr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:text="@string/lbl_diag_pr"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/res_range_pr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/res_current_pr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/color_clearWhite"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_sky_blue"
                    android:textSize="24sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_diag_qt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:text="@string/lbl_diag_qt"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/res_range_qt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/res_current_qt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/color_clearWhite"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_sky_blue"
                    android:textSize="24sp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_diag_rr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:text="@string/lbl_diag_rr"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/res_range_rr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/color_clearWhite"
                    android:padding="2dp"
                    android:textColor="@color/color_pithcBlack"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/res_current_rr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/color_clearWhite"
                    android:gravity="center"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/color_sky_blue"
                    android:textSize="24sp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_deteksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_detect"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_startReading"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_setting"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/db_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Spinner
                android:id="@+id/client_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/color_tabHeader"
                android:entries="@array/NameTittle" />

            <TextView
                android:id="@+id/btn_set_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/color_navy_blue"
                android:padding="4dp"
                android:text="@string/btn_pasangDokter"
                android:textColor="@color/color_pithcBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/db_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/db_lbl_nama"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@color/color_tabHeader"
                android:padding="2dp"
                android:text="@string/lbl_nama"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/db_lbl_usia"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/color_tabHeader"
                android:padding="2dp"
                android:text="@string/lbl_usia"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/db_lbl_tanggal"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/color_tabHeader"
                android:padding="2dp"
                android:text="@string/db_lbl_tanggal"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/db_lbl_hasil"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/color_tabHeader"
                android:padding="2dp"
                android:text="@string/db_lbl_hasil"
                android:textColor="#000000" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/db_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:orientation="vertical">

            </TableLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <LinearLayout
        android:id="@+id/menu_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/color_skygrey"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btn_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_test" />

            <Button
                android:id="@+id/btn_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_medrec" />

            <Button
                android:id="@+id/btn_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_info" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_setting" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/menu_spacer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:background="@color/color_trans_black" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>